tests/sksl/errors/PixelFormatMismatch.glsl
### Compilation failed:

error: 25: unsupported directive '#error'
#error /* TODO(b/295160569): implement pixel-format mismatch tests */
^^^^^^
1 error
